--- a/src/assets/all.css
+++ b/src/assets/all.css
@@ -1,1 +1,12 @@
 body {overflow: scroll !important;}
+
+::-webkit-scrollbar {
+		width: 3px;
+		/* height: 10px; */
+	}
+
+	/* 滚动条的滑块 */
+	::-webkit-scrollbar-thumb {
+		background-color: #063b5a27;
+		border-radius: 5px;
+	}
